<resources>
    <string name="add_filter">Add Filter</string>
    <string name="add_action">Add Action</string>
    <string name="create_rule">Create Rule</string>
    <string name="view_rules">View Rules</string>
    <string name="on_off">On/Off</string>
    <string name="welcome">Welcome to Omnidroid</string>
    <string name="disclaimer_title">Omnidroid Disclaimer</string>
    <string name="disclaimer_msg">&lt;b&gt;This software is potentially damaging&lt;/b&gt; and is provided &quot;AS IS&quot; and without any expressed or implied warranties.  In no event shall the copyright owner or contributors be liable for any damages as a result of this software.  By using this software you agree to these terms.</string>
    <string name="select_data_from_list">Either, select the data already provided by the event application:</string>
    <string name="name_to_save">Enter a name to remember me by</string>
    <string name="save_response">Save data to pass using the OmniHandler</string>
    <string name="name_omnihandler">Name this OmniHandler</string>
    <string name="enter_data">Enter the data to be inserted</string>
    <string name="save_as">Save as</string>
    <string name="save_dialog">Enter a name to remember this OmniHandler by</string>
    <string name="manual_entry">Or, enter data manually:</string>
    <string name="enter_rule_name">Enter a rule name below:</string>
    <string name="enter_rule_description">Enter a rule description below:</string>
    <string name="actions">actions</string>
    <string name="omnidroid_is_disabled">Omnidroid has been disabled. To enable Omnidroid go to the settings menu.</string>
    <string name="omnidroid">Omnidroid</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="agree">I Agree</string>
    <string name="disagree">I Disagree</string>
    <string name="info">Info</string>
    <string name="view">View</string>
    <string name="event_attributes">Attributes</string>
    <string name="yes">Yes</string>
    <string name="sorry">Sorry</string>
    <string name="no">No</string>
    <string name="coming_soon">We hope to implement this soon.</string>
    <string name="unknown">unknown</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="missing_action">At least one action must be added.</string>
    <string name="missing_data">Data field can not be empty.</string>
    <string name="missing_name">OmniHandler name can not be empty.</string>
    <string name="bad_input">There was an error creating your action, check your input and try again.</string>
    <string name="select_input">Please select an input to use parameters.</string>
    <string name="error_was">The error was:</string>
    <string name="oh_no">Oh no!</string>
    <string name="throttle_alert_title">Omnidroid Temporarily Disabled</string>
    <string name="throttle_alert_msg">Omnidroid exceeded throttle limit of %d by processing %d events in the last minute.\nOmnidroid will not process any more events until it is under the limit.\nThis may be caused by a looping rule.  Please see the Logs for more information.\n"</string>
    <string name="confirm_item_delete">Are you sure you want to delete this item?</string>
    <string name="confirm_rule_delete">Are you sure you want to delete this rule?</string>
    <string name="enable_msg">Enabling Omnidroid</string>
    <string name="disable_msg">Disabling Omnidroid</string>
    <string name="save_rule">Save Rule</string>
    <string name="rule_saved">Rule saved successfully.</string>
    <string name="omnidroid_is_disabled_alert">Omnidroid is disabled.  Enable it for rules to take effect.</string>
    <string name="help_title">Omnidroid Help</string>
    <string name="help_activitymain">Omnidroid allows you to create rules that process events that occur on your Android device and automatically take action as a result.&lt;br /&gt;&lt;br /&gt;Select the &lt;i&gt;Create Rule&lt;/i&gt; button to store new rules.&lt;br /&gt;&lt;br /&gt;Select the &lt;i&gt;View Rules&lt;/i&gt; button to view, edit, delete, enable, or disable rules that have already been created.</string>
    <string name="help_filtersandactions">Add filters to an event to limit when this rule is triggered.  Add actions you would like performed when this rule is triggered.</string>
    <string name="help_saved_rules">Use this screen to enable and disable the rules that are saved.</string>
    <string name="help_dlgattributes">Creating filters allows you to match when the event will be acted on.&lt;br /&gt;&lt;br /&gt;Events have different attribute types that can be filtered.&lt;br /&gt;Select the type of attribute you would like to match.</string>
    <string name="help_dlgfilters">Creating filters allows you to match when the event will be acted on.&lt;br /&gt;&lt;br /&gt;Select the filter that you want to apply from the list of filter types.</string>
    <string name="help_dlgfilterinput">Creating filters allows you to match when the event will be acted on.&lt;br /&gt;&lt;br /&gt;Input entered here will be passed to the filter.&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;This rule will only be activated if it matches the data provided by this filter.</string>
    <string name="help_dlgapplications">Select the application that will provide the resultant action for this rule.</string>
    <string name="help_dlgactions">Applications can perform certain actions.  Select the action that you want this application to perform as a result of the root event.</string>
    <string name="help_dlgactioninput">Input entered here will be passed to the action you are creating.  If attributes from the event that triggered this application are compatible with the inputs here, you can select the attribute by clicking on the attributes button.</string>
    <string name="help_dlgapplicationlogininput"></string>
    <string name="action_default_message">message</string>
    <string name="choose_root_event_title">Choose a root event</string>
    <string name="addfilters_and_actions_title">Add filters and actions to your rule</string>
    <string name="attributes_title">Attributes</string>
    <string name="filters_title">Filters</string>
    <string name="filter_input_title">Filter Input</string>
    <string name="applications_title">Applications</string>
    <string name="show_website_title">Show Website</string>
    <string name="rule_name_title">Rule Name</string>
    <string name="saved_rules_title">Enable Saved Rules</string>
    <string name="login_title">Login</string>
    <string name="actions_title">Actions</string>
    <string name="action_input_title">Action Input</string>
    <string name="logs">Logs</string>
    <string name="about_title">About Omnidroid</string>
    <string name="about_desc">Omnidroid is an Automated Event Handler.</string>
    <string name="about_version">Version:</string>
    <string name="about_license">License: Apache 2.0 (http://www.apache.org/licenses/)</string>
    <string name="about_website">Website: http://code.google.com/p/omnidroid</string>
    <string name="copyright">&#169; 2009, 2010 Omnidroid.  All rights reserved.</string>
    <string name="choose_root_event_inst">Pick a root event from the list below to start building your rule:</string>
    <string name="choose_filters_actions_inst">Select an item from the list below, then add filters or actions:</string>
    <string name="select_application_title">Select an application:</string>
    <string name="select_action_title">Select an action of [%s] to use:</string>
    <string name="select_attribute_title">Select an attribute for [%s] to filter on:</string>
    <string name="select_filter_title">Select a filter to apply to [%s]:</string>
    <string name="select_rule_toggle_inst">Please select a rule from the list to turn on/off.</string>
    <string name="select_control_for_param_alert_inst">Please select a control to use parameters.</string>
    <string name="phone_num_eq_filter_inst">Enter a phone number to match below:</string>
    <string name="phone_num_not_eq_filter_inst">Enter the phone number to exclude from the filter </string>
    <string name="num_eq_filter_inst">Enter a number to match:</string>
    <string name="num_not_eq_filter_inst">Enter a number to exclude:</string>
    <string name="num_lessthan_filter_inst">Enter a number to match less than:</string>
    <string name="num_greaterthan_filter_inst">Enter a number to match greater than:</string>
    <string name="text_eq_filter_inst">Enter an exact text string to match:</string>
    <string name="text_cont_filter_inst">Enter a phrase in the text body to match:</string>
    <string name="day_of_week_eq_filter_inst">Enter a day of the week to match:</string>
    <string name="day_of_week_not_eq_filter_inst">Enter the day of the week to exclude from the filter:</string>
    <string name="bad_data_format">Bad data format:\n</string>
    <string name="bad_distance_format">Please enter a distance in miles:</string>
    <string name="pick_start_time">Pick a start time</string>
    <string name="pick_end_time">Pick an end time</string>
    <string name="pick_time">Pick a time</string>
    <string name="area_address">Address:</string>
    <string name="area_distance">Distance (in miles):</string>
    <string name="clear">Clear</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="event_log">Event Log</string>
    <string name="action_log">Action Log</string>
    <string name="general_log">General Log</string>
    <string name="All">All</string>
    <string name="Events">Events</string>
    <string name="Actions">Actions</string>
    <string name="General">General</string>
    <string name="no_logs">No logs are available.</string>
    <string name="toggle_enabled">Toggle Enabled</string>
    <string name="enable_all">Enable All</string>
    <string name="disable_all">Disable All</string>
    <string name="edit_rule">Edit Rule</string>
    <string name="delete_rule">Delete Rule</string>
    <string name="toggle_rule">Toggle Rule</string>
    <string name="one_rule">" (1 rule)"</string>
    <string name="n_rules">" (%d rules)"</string>
    <string name="one_rule_with_arg">" (1 rule %s)"</string>
    <string name="n_rules_with_arg">" (%d rules %s)"</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="disable_notification">Disable Notification</string>
    <string name="setup_account">Setup Account</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="throttle">Throttle</string>
    <string name="throttle_description">Limit number of events to process per minute</string>
    <string name="sound_enabled">Sound Notifications</string>
    <string name="light_enabled">LED Notifications</string>
    <string name="vibrate_enabled">Vibrate Notifications</string>
    <string name="sound_desc">Allow Omnidroid to alert using sound</string>
    <string name="light_desc">Allow Omnidroid to alert using lights</string>
    <string name="vibrate_desc">Allow Omnidroid to alert using vibration</string>
    <string name="notification_desc"></string>
    <string name="notification">Notifications</string>
    <string name="pref_key_sound">SoundKey</string>
    <string name="pref_key_light">LightKey</string>
    <string name="pref_key_vibrate">VibrateKey</string>
    <string name="pref_key_omnidroid_enabled">OmnidroidEnabled</string>
    <string name="pref_key_notification">NotificationKey</string>
    <string name="pref_key_throttle">Throttle</string>
</resources>