<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title" >

	<!-- Using keys from the strings resource allows for compile time 
	     errors where these preferences are accessed programmatically. -->
    <CheckBoxPreference
            android:key="@string/pref_key_sound"
            android:defaultValue="false"
            android:summary="@string/sound_desc"
            android:title="@string/sound_enabled" />
    <CheckBoxPreference
            android:key="@string/pref_key_light"
            android:defaultValue="false"
            android:summary="@string/light_desc"
            android:title="@string/light_enabled" />
    <CheckBoxPreference
            android:key="@string/pref_key_vibrate"
            android:defaultValue="false"
            android:summary="@string/vibrate_desc"
            android:title="@string/vibrate_enabled" />
    <CheckBoxPreference
            android:key="@string/pref_key_omnidroid_enabled"
            android:defaultValue="true"
            android:summary="@string/omnidroid_enabled_desc"
            android:title="@string/omnidroid_enabled" />
    <CheckBoxPreference
            android:key="@string/pref_key_notification"
            android:defaultValue="true"
            android:summary="@string/notification_desc"
            android:title="@string/notification" />
    <ListPreference
            android:key="@string/pref_key_throttle"
            android:summary="@string/throttle_description"
            android:title="@string/throttle"
            android:entries="@array/throttle_list"
            android:entryValues="@array/throttle_values"
            android:dialogTitle="@string/throttle_description" />
</PreferenceScreen>